--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="description here">
     <meta name="keywords" content="keywords,here">
     <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
-    <title>HTML Blank Bootstrap</title>
+    <title>Matrix Technical Services</title>
     <!-- Bootstrap -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Playfair+Display" rel="stylesheet"> 
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -26,13 +26,52 @@
    <header class="main-header">
        <div class="container">
            <div class="row">
-               <div class="col-xs-12">
-                   <div class="logo"><a href="#"><img src="images/mts_logo.png" alt="logo"></a></div>
+               <div class="col-xs-12 text-center">
+                   <div class="logo">
+                       <a href="#"><img src="images/mts_logo.png" class="img-responsive" alt="logo"></a>
+                       <h1>Matrix Technical Services</h1>
+                   </div>
+               </div>
+           </div>
+           <div class="row">
+               <div class="col-xs-12 text-center">
+                  <img src="images/mts_eye.png" alt="eye" class="eye img-responsive">
+                   <div class="section-space">
+                       <div class="secton-title">
+                           <h2>Expert Consultants in Virtual and Augmented Reality</h2>
+                           <h4>Decades of Experience. Zero Hype.</h4>
+                       </div>
+                   </div> 
                </div>
            </div>
        </div>
    </header>
-   
+<!--   /*====================== Service Section =========================*/-->
+   <section class="service section-space">
+       <div class="container">
+           <div class="row">
+               <div class="col-xs-12">
+                   <div class="section-title">
+                       <h2>Our Services</h2>
+                       <h4>Rely on Seasoned Expertise</h4>
+                   </div>
+               </div>
+               <div class="col-xs-12">
+                   <div class="content">
+                       <p>Our practice focuses on client needs involving fully immersive and optical see-through head-mounted displays, tactile & force feedback devices, as well as binaural / spatial audio solutions.</p>
+                       <ul>
+                           <li>Innovation and R&D Partnerships</li>
+                           <li>Enterprise Application Development</li>
+                           <li>Opportunity Vetting for Investors</li>
+                           <li>Technology / Industry / Market Insights</li>
+                           <li>C-Suite and Boards of Directors Advisory</li>
+                           <li>Strategic Relationship Development</li>
+                       </ul>
+                   </div>
+               </div>
+           </div>
+       </div>
+   </section>
     <!-- <script src="js/jquery.js" type="text/javascript"></script> -->
     <!-- <script src="js/bootstrap.min.js" type="text/javascript"></script> -->
     <!-- <script src="js/custom.js" type="text/javascript"></script> -->
