--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <meta name="keywords" content="keywords,here">
     <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
     <title>Matrix Technical Services</title>
-    <!-- Bootstrap -->
+    <!-- Google font -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Playfair+Display" rel="stylesheet"> 
+    <!-- Boostrap font -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- <link href="css/font-awesome.min.css" rel="stylesheet"> -->
     <link href="css/style.css" rel="stylesheet">
@@ -57,7 +58,7 @@
                    </div>
                </div>
                <div class="col-xs-12">
-                   <div class="content">
+                   <div class="content text-center">
                        <p>Our practice focuses on client needs involving fully immersive and optical see-through head-mounted displays, tactile & force feedback devices, as well as binaural / spatial audio solutions.</p>
                        <ul>
                            <li>Innovation and R&D Partnerships</li>
@@ -72,6 +73,43 @@
            </div>
        </div>
    </section>
+<!--   /*====================== contact Section =========================*/-->
+    <section class="contact section-space">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12">
+                    <div class="section-title">
+                        <h2>Contact Us</h2>
+                        <h4>Lets start a conversation about your needs. Use the form below or simply send an email to inquiry@matrixtechnicalservices.com</h4>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-12">
+                    <form action="#" class="contct-form">
+                        <input type="text" class="name" name="name" placeholder="Name">
+                        <input type="email" class="email" name="email" placeholder="Email*">
+                        <textarea name="msg-box" class="message-box" placeholder="Message"></textarea>
+                        <div class="text-center">
+                            <input type="submit" class="submit" value="send">
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+<!--    /*====================== footer Section =========================*/-->
+    <footer class="main-footer text-center">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12">
+                    <div class="copy-right">Copyright © 2017 Matrix Technical Services - All Rights Reserved.</div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    
+<!--    /*====================== All javascript link =========================*/-->
     <!-- <script src="js/jquery.js" type="text/javascript"></script> -->
     <!-- <script src="js/bootstrap.min.js" type="text/javascript"></script> -->
     <!-- <script src="js/custom.js" type="text/javascript"></script> -->
