--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
            <div class="row">
                <div class="col-xs-12 text-center">
                    <div class="logo">
-                       <a href="#"><img src="images/mts_logo.png" class="img-responsive" alt="logo"></a>
-                       <h1>Matrix Technical Services</h1>
+                       <a href="#"><img src="images/mts_logo.png" class="img-responsive" alt="logo">
+                       <h1>Matrix Technical Services</h1></a>
                    </div>
                </div>
            </div>
